--- a/tarefa012/ordenacao/pom.xml
+++ b/tarefa012/ordenacao/pom.xml
@@ -11,7 +11,7 @@
   <url>http://github.com/nogueiralegacy/ordenacao</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.mainClass>com.github.nogueiralegacy.ordenacao.Test</project.mainClass>
+    <project.mainClass>com.github.nogueiralegacy.ordenacao.Teste</project.mainClass>
   </properties>
 
   <build>
